# clamshellOS

./: Cargo.toml  build.sh
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
src/allocator/: fixed_size_block.rs  linked_list.rs
tests/: basic_boot.rs  should_panic.rs
