[package]
name = "clamshell"
version = "0.1.1"
authors = ["Infernity <infernity@infernity.dev>", "Digin"]
edition = "2018"

[[test]]
name = "should_panic"
harness = false

[dependencies]
bootloader = "=0.9.23"
volatile = "=0.2.6"
spin = "=0.5.2"
x86_64 = "=0.14.10"
uart_16550 = "=0.2.18"
pic8259 = "=0.10.1"
pc-keyboard = "=0.7.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33         # (0x10 << 1) | 1
